--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ h1{
 h2{
 	text-align: center;
 	font-family:gra;
-	font-size:3px;
+	font-size:30px;
 	margin-top: 0.2in;
 	margin-bottom: 0.9in;
 }
@@ -370,6 +370,11 @@ img.set2{
 	height: auto;
 	margin-top: 25px;
 }
+
+img{
+	width: 90%; 
+}
+
 @media screen and (min-width: 1000px){ 
 html{
 	background-image: url(pexels-scott-webb-3255761.jpg);
@@ -535,4 +540,8 @@ img.set2{
 	width: 20%;
 	height: auto;
 	margin-top: 25px;
+}
+
+img{
+	width: 200%;
 }
