--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ p{
 	margin-top:0;
 }
 a{
-	text-color: black;
+	color: black;
 }
 
 
@@ -255,7 +255,7 @@ p{
 	margin-top:0;
 }
 a{
-	text-color: black;
+	color: black;
 }
 
 
@@ -435,7 +435,7 @@ p{
 	margin-top:0;
 }
 a{
-	text-color: black;
+	color: black;
 }
 
 
