--- a/styles.css
+++ b/styles.css
@@ -372,7 +372,10 @@ img.set2{
 }
 
 img{
-	width: 90%; 
+	width: 50%; 
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 @media screen and (min-width: 1000px){ 
